Fix character count alignment

--- a/styles/sms-content-checker.css
+++ b/styles/sms-content-checker.css
@@ -16,13 +16,9 @@ h1 {
 }
 
 #smsContentHighlighted {
-  /* font-family: monospace; */
   padding: 0.5rem;
   white-space: pre-wrap;
   word-wrap: break-word;
-  /* width: 100%;
-  max-width: 50rem;
-  min-height: 4rem; */
   margin-bottom: 1rem;
   margin-top: 1rem;
   color: var(--dracula-comment);
@@ -36,18 +32,15 @@ h1 {
   position: relative;
 }
 
-#charCount {
-  position: absolute;
-  right: 0;
-  top: 100%;
-  margin-top: 0.2rem;
-  font-size: 0.85rem;
+#smsContentInput {
+  padding-bottom: 1.5rem;
 }
 
-#charLength,
-#charLimit,
-#segmentCount {
-  display: inline;
+#charCount {
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  font-size: 0.85rem;
 }
 
 #segmentCount {
@@ -57,8 +50,6 @@ h1 {
 .highlighted-text {
   color: var(--dracula-orange);
   background-color: var(--dracula-background);
-  /* font-weight: bold; */
-  /* font-size: 1.1rem; */
 }
 
 .warning {
@@ -74,5 +65,4 @@ h1 {
 
 .warning .warning-type {
   color: var(--dracula-red);
-  /* font-weight: bold; */
 }
